# Secure-Multi-Party-Computation-CPP

./: CMakeLists.txt  main.cpp
todo/include/: Party.h  SecretShare.h  ShamirSharing.h  Task.h  TaskManager.h
todo/include/utils/: ShareUtils.h  constants.h
todo/overflow/: utilities.cc  utilities.h
todo/share/: overflow.cc  overflow.h
todo/src/: Party.cc  SecretShare.cc  ShamirSharing.cc  Task.cc  TaskManager.cc
todo/src/utils/: ShareUtils.cc
